--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -73,15 +73,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: streamlit-build
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout full repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0   # Fetch full history to avoid shallow update issues
 
       - name: Push code to Hugging Face Space
         env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}   # 🔹 Your HF Access Token
-          HF_USERNAME: ${{ secrets.HF_USERNAME }} # 🔹 Your HF username
-          HF_SPACE: ${{ secrets.HF_SPACE }}       # 🔹 Your HF Space name
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}   # Your HF Access Token
+          HF_USERNAME: ${{ secrets.HF_USERNAME }} # Your HF username
+          HF_SPACE: ${{ secrets.HF_SPACE }}       # Your HF Space name
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
+          git remote remove space || true
           git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
           git push space main --force
