--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,16 +76,37 @@ jobs:
       - name: Checkout full repo
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0   # Fetch full history to avoid shallow update issues
+          fetch-depth: 0   # Full history to avoid shallow update issues
 
-      - name: Push code to Hugging Face Space
-        env:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}   # Your HF Access Token
-          HF_USERNAME: ${{ secrets.HF_USERNAME }} # Your HF username
-          HF_SPACE: ${{ secrets.HF_SPACE }}       # Your HF Space name
+      - name: Configure Git for HF push
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git remote remove space || true
-          git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
+
+      - name: Add HF remote
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+          HF_SPACE: ${{ secrets.HF_SPACE }}
+        run: |
+          if git remote | grep -q space; then
+            echo "Remote 'space' already exists"
+          else
+            git remote add space https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
+          fi
+
+      - name: Verify HF credentials
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+          HF_SPACE: ${{ secrets.HF_SPACE }}
+        run: |
+          git ls-remote https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
+
+      - name: Push code to HF Space
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+          HF_USERNAME: ${{ secrets.HF_USERNAME }}
+          HF_SPACE: ${{ secrets.HF_SPACE }}
+        run: |
           git push space main --force
