--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,24 +22,29 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          lfs: true        # ✅ Pull Git LFS files
-          fetch-depth: 0   # Full history to avoid shallow clone issues
+          lfs: true
+          fetch-depth: 0
 
       - name: Install Git LFS
         run: |
           sudo apt-get update
           sudo apt-get install -y git-lfs
           git lfs install
-          git lfs pull   # ✅ Ensure actual PDF files are present
+          git lfs pull
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
+      - name: Check Python version
+        run: python --version
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          # Ensure NumPy compatible version for Python 3.11
+          pip install "numpy>=1.26.0"
           pip install -r requirements.txt
 
       - name: Run ingestion pipeline
@@ -80,6 +85,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install "numpy>=1.26.0"
           pip install -r requirements.txt
 
       - name: Test Streamlit app launch
@@ -128,13 +134,11 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_USERNAME: ${{ secrets.HF_USERNAME }}
           HF_SPACE: ${{ secrets.HF_SPACE }}
-        run: |
-          git ls-remote https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
+        run: git ls-remote https://$HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/$HF_USERNAME/$HF_SPACE
 
       - name: Push code to HF Space
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
           HF_USERNAME: ${{ secrets.HF_USERNAME }}
           HF_SPACE: ${{ secrets.HF_SPACE }}
-        run: |
-          git push space main --force
+        run: git push space main --force
